--- a/Test/transfer.plist
+++ b/Test/transfer.plist
@@ -2,7 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>New item</key>
+	<key>key</key>
+	<integer>1234</integer>
+	<key>passes</key>
+	<integer>1</integer>
+	<key>inOrOut</key>
+	<integer>2</integer>
+	<key>text</key>
 	<string></string>
 </dict>
 </plist>
