--- a/Test/transfer.plist
+++ b/Test/transfer.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>key</key>
-	<string>11</string>
+	<string></string>
 	<key>passes</key>
 	<string>1</string>
 	<key>inOrOut</key>
